quick print update
